feature: navbar modal added

--- a/plan_de_charge_frontend/src/app/layout/header/header-notification/header-notification.component.html
+++ b/plan_de_charge_frontend/src/app/layout/header/header-notification/header-notification.component.html
@@ -1,5 +1,9 @@
 <div class="icon">
-  <mat-icon style="color: rgb(90, 90, 90)" matBadge="1" matBadgeColor="primary"
+  <mat-icon
+    style="color: rgb(90, 90, 90)"
+    matBadge="1"
+    matBadgeColor="primary"
+    aria-hidden="false"
     >notifications</mat-icon
   >
 </div>
