--- a/plan_de_charge_frontend/src/app/layout/navbar/navbar.component.html
+++ b/plan_de_charge_frontend/src/app/layout/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<div class="navbar-container">navbar</div>
+<div class="navbar-container">
+  <!-- Navbar Header + User Options -->
+  <app-navbar-header></app-navbar-header>
+
+  <!-- Menu Modal => Switch view between Navigation and Theme Settings -->
+  <app-navbar-menu-modal></app-navbar-menu-modal>
+</div>
