feature: angular table added

--- a/plan_de_charge_frontend/src/app/layout/navbar/navbar-header/navbar-header.component.html
+++ b/plan_de_charge_frontend/src/app/layout/navbar/navbar-header/navbar-header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-header-container">
+<div class="navbar-header-container" (click)="navigateToUserProfile()">
   <img src="../../../../assets/images/users/DemoAdmin.png" alt="user_avatar" />
 
   <div class="navbar-header-container__user">
