--- a/plan_de_charge_frontend/src/app/layout/navbar/navbar-navigation-menu/navbar-navigation-menu.component.html
+++ b/plan_de_charge_frontend/src/app/layout/navbar/navbar-navigation-menu/navbar-navigation-menu.component.html
@@ -29,6 +29,11 @@
           <div class="item-name">
             {{ item.name }}
           </div>
+          <div class="item-arrowIcon">
+            <mat-icon style="color: rgb(90, 90, 90)"
+              >arrow_forward_ios</mat-icon
+            >
+          </div>
         </div>
 
         <!-- Sub Navigation Links -->
